@@ -297,6 +297,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9466) "Rollback failed" page doesn't format edit comment
 * (bug 9472) Invalid XHTML on cached special pages
 * (bug 9472) Invalid XHTML on Special:Newpages
+* (bug 4764) "My contributions" not bold when viewing own contributions
  
 == Maintenance ==
 * New script maintenance/language/checkExtensioni18n.php used to check i18n
